fix(style): align rupee icon and add intent to input

--- a/src/features/Transactions/components/AddTransaction/addTransaction.css
+++ b/src/features/Transactions/components/AddTransaction/addTransaction.css
@@ -60,3 +60,11 @@ form select {
   background: white;
   border: 2px solid black;
 }
+
+.icon-text #rupee-icon {
+  position: absolute;
+}
+
+.icon-text input {
+  text-indent: 1em;
+}
